--- a/quarto/limits/intermediate_value_theorem.qmd
+++ b/quarto/limits/intermediate_value_theorem.qmd
@@ -162,7 +162,7 @@ caption = L"""
 
 Illustration of the bisection method to find a zero of a function. At
 each step the interval has $f(a)$ and $f(b)$ having opposite signs so
-that the intermediate value theorem guaratees a zero.
+that the intermediate value theorem guarantees a zero.
 
 """
 
