--- a/quarto/precalc/julia_overview.qmd
+++ b/quarto/precalc/julia_overview.qmd
@@ -280,7 +280,7 @@ Values will be promoted to a common type (or type `Any` if none exists). For exa
 (Vectors are used as a return type from some functions, as such, some familiarity is needed.)
 
 
-Other common container types are variations of vectors (higher-dimensional arrarys, offset arrays, etc.)  tuples (for heterogeneous, immutable, indexed values); named tuples (which add a name to each value in a tuple); and dictionaries (for associative relationships between a key and a value).
+Other common container types are variations of vectors (higher-dimensional arrays, offset arrays, etc.)  tuples (for heterogeneous, immutable, indexed values); named tuples (which add a name to each value in a tuple); and dictionaries (for associative relationships between a key and a value).
 
 
 Regular arithmetic sequences can be defined by either:
