--- a/quarto/references.bib
+++ b/quarto/references.bib
@@ -87,3 +87,25 @@ edition   = {Julia adaptation},
 URL = {https://tobydriscoll.net/fnc-julia/frontmatter.html},
 eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9781611975086}
 }
+
+## matrix calculus
+
+@misc{BrightEdelmanJohnson,
+      title={Matrix Calculus (for Machine Learning and Beyond)},
+      author={Paige Bright and Alan Edelman and Steven G. Johnson},
+      year={2025},
+      eprint={2501.14787},
+      archivePrefix={arXiv},
+      primaryClass={math.HO},
+      url={https://arxiv.org/abs/2501.14787},
+}
+
+@misc{CarlssonNikitinTroedssonWendt,
+      title={The bilinear Hessian for large scale optimization},
+      author={Marcus Carlsson and Viktor Nikitin and Erik Troedsson and Herwig Wendt},
+      year={2025},
+      eprint={2502.03070},
+      archivePrefix={arXiv},
+      primaryClass={math.OC},
+      url={https://arxiv.org/abs/2502.03070},
+}
